noinst_LTLIBRARIES = libautolayout.la

INCLUDES = -Idialogs -Irefactoring \
	$(all_includes)
#AM_CXXFLAGS = -I/usr/include/graphviz/

libautolayout_la_METASOURCES = AUTO
#noinst_HEADERS = node.h autolayout.h autolayoutdlg.h autolayouter.h canvas.h \
#	autolayouteradapter.h graphvizautolayouter.h simplecanvas.h graphvizgraph.h graphviznode.h \
#	dotautolayouter.h dotautolayouter.h baseinclude.h
#noinst_LIBRARIES = libautolayout.la
libautolayout_la_SOURCES = newautolayoutdialog.ui autolayoutdlg.cpp \
	autolayouter.cpp autolayouteradapter.cpp graphvizautolayouter.cpp simplecanvas.cpp \
	graphvizgraph.cpp graphviznode.cpp dotautolayouter.cpp neatoautolayouter.cpp \
	circoautolayouter.cpp

#libautolayout_la_LIBADD = /usr/lib/graphviz/libdotneato.la
#libautolayout_la_LDFLAGS = -ldotneato -L/usr/lib/graphviz


